# coral-ml

./: .env  .gitignore  commands.txt  coral-ml.code-workspace  docker-bake.hcl  docker-compose.yml  google_coral_ml.code-workspace  ml.code-workspace  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-hub-publish.yml  docker-hub.yml
coral-app/: .dockerignore  .gitignore  Dockerfile  main.py  requirements.txt
coral-app/scripts/: build.py  stream.py
coral-app/src/: common.py  zutils.py
coral-app/src/classification/: classify.py
coral-app/src/detection/: bbox.py  detect.py
coral-app/src/endpoints/: __init__.py  classificattion.py  streamer.py
coral-app/src/repositories/: record_repository.py
db/: Dockerfile  backup.sql  build.sql
db/stored-procedures/: spModel_Create.sql  spModel_Delete.sql  spModel_GetAll.sql  spModel_GetById.sql  spModel_Save.sql  spRecord_Create.sql  spRecord_Delete.sql  spRecord_GetById.sql  spRecord_GetLoaded.sql  spRecord_GetWithRecordTypeId.sql  spRecord_SetLoaded.sql  spTFLiteRecord_Create.sql  spTFLiteRecord_Delete.sql  spTFLiteRecord_GetAll.sql  spTFLiteRecord_GetById.sql
db/stored-procedures/maria-db/: spRecord_Create.sql  spRecord_Delete.sql  spRecord_Download.sql  spRecord_GetById.sql  spRecord_GetLoaded.sql  spRecord_SetLoaded.sql
db/stored-procedures/sql-server/: spRecord_Download.sql
flask/: app.py  main.py  stream.sh
flask/src/: common.py  stream.py
flask/src/bluebrints/: api.py  video.py
flask/src/classification/: classify.py
flask/src/detection/: bbox.py
flask/src/endpoints/: publisher.py
frontend/src/: App.vue
frontend/src/components/: Rest.vue
main/: client.py  server.py  stream_pb2.py  stream_pb2_grpc.py
main/scripts/: build.py
mariadb/: .gitignore  Dockerfile  build.sql
mariadb/stored-procedures/maria-db/: spRecordType_GetAll.sql  spRecord_GetWithRecordTypeId.sql
model-api/: model-api.sln
model-api/NetMQ/: Program.cs
model-api/Testing/: Data.txt  Program.cs
model-api/Testing/Properties/: launchSettings.json
model-api/src/Application/: Application.csproj
model-api/src/Contracts/: ApiRoutes.cs  StoredProcedures.cs
model-api/src/Infrastructure/: DependencyInjection.cs  Infrastructure.csproj
model-api/src/ModelAPI/: ModelAPI.csproj  Program.cs  (+3 more)
node-socket/: bundle.js  nodemon.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
node-socket/src/: api.ts  environment.d.ts  main.ts  server.js  server.js.map  server.ts  video.ts
node.socket/: package-lock.json  package.json
node.socket/src/: server.js  server.js.map  server.ts
proxy/: default.conf
python/: .dockerignore  .gitignore  Dockerfile.Flask  build.py  push.py  requirements.txt
python/notebooks/: image-classifier.ipynb
python/scripts/: build.py  push.py
record-api/: Dockerfile  record-api.sln
scripts/: publish.ts
services/coral-app/: .env  .gitignore  Dockerfile  main.py  requirements.txt
services/coral-app-cpp/: .clang-format  CMakeLists.txt  Dockerfile  PrintVariables.cmake  main.cpp
services/coral-app-cpp/lib/libav/: CMakeLists.txt
services/coral-app-cpp/lib/libzmq/: CmakeLists.txt
services/coral-app-cpp/lib/opencv/: CMakeLists.txt
services/coral-app-cpp/modules/coral-app-exe/: CMakeLists.txt  main.cpp  main.hpp
services/coral-app-cpp/modules/core/: CMakeLists.txt
services/coral-app-cpp/modules/core/include/: core.hpp  fps.hpp
services/coral-app-cpp/modules/core/src/: core.hpp  fps.cpp
services/coral-app-cpp/modules/main-exe/: CMakeLists.txt
services/coral-app-cpp/modules/main-exe/src/: main.cpp
services/coral-app-cpp/modules/servers/: CMakeLists.txt
services/coral-app-cpp/modules/servers/include/: video-server.hpp
services/coral-app-cpp/modules/servers/src/: video-server.cpp  video-server.hpp
services/coral-app-cpp/modules/zmq-servers/: CMakeLists.txt
services/coral-app-cpp/modules/zmq-servers/src/: video-server.cpp  video-server.hpp
services/coral-app-cpp/servers/: CMakeLists.txt  servers.hpp  video-server.cpp
services/coral-app-cpp/zmq-servers/: CMakeLists.txt
services/coral-app-cpp/zmq-servers/src/: video-server.cpp  zmq-servers.hpp
services/mariadb/: .dockerignore  Dockerfile
services/node-api/: .env  Dockerfile  package-lock.json  package.json  rollup.config.js  tsconfig.json
services/node-socket/: bundle.js  package.json  rollup.config.js  tsconfig.json
services/node-video/: .dockerignore  .env  Dockerfile  nodemon.json  package-lock.json  package.json  rollup.config.js
services/proxy/: Dockerfile  default.conf  nginx.conf  replace-env.sh
services/record-api/: Dockerfile  record-api.sln
services/vue-app/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
socket-proxy/: Dockerfile  bundle.js  package-lock.json  package.json  rollup.config.js
socket-proxy/src/: api.ts  main.ts  video.ts
vue/: .dockerignore  Dockerfile  index.html  jest.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
vue-app/: Dockerfile  vite.config.ts
vue-app/env/: .env.compose  .env.development  .env.iot2050  .env.production
vue-app/nginx/: default.conf
vue-app/src/: main.ts
vue/env/: .env.production
vue/src/: App.vue  main.ts  shims-vue.d.ts
(+354 files in other folders)
